# ComputerGraphics

./: .gitignore  README.md
lab01/: CMakeLists.txt  README.md
lab01/.cache/clangd/index/: bresenham.cpp.98A1F2533F3A240C.idx  bresenham.hpp.8C86DB1E90F82E04.idx  main.cpp.0D84805610C58D9A.idx  main.cpp.ECC79C7350717DD0.idx
lab01/include/: bresenham.hpp
lab01/src/: bresenham.cpp  main.cpp
lab02/: CMakeLists.txt  README.md
lab02/include/: cyrus_beck.hpp
lab02/src/: cyrus_beck.cpp  main.cpp
lab03/: CMakeLists.txt  README.md
lab03/include/: sobel.hpp
lab03/src/: main.cpp  sobel.cpp
lab04/: CMakeLists.txt  README.md
lab04/include/: bezier.hpp
lab04/src/: bezier.cpp  main.cpp
lab05/: CMakeLists.txt  README.md
lab05/include/: fill.hpp
lab05/src/: fill.cpp  main.cpp
lab06/: CMakeLists.txt  README.md
lab06/include/: bezier.hpp
lab06/src/: bezier.cpp  main.cpp
lab07/: CMakeLists.txt  README.md
lab07/include/: render.hpp
lab07/src/: main.cpp  render.cpp
